fix size problems on smaller screens

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -26,6 +26,22 @@ body {
     overflow-x: hidden;
   }
 
+  @media (max-width: 768px) {
+    body {
+      font-size: 1.5rem;
+    }
+  
+    canvas {
+      width: 100%;
+      height: auto;
+    }
+  
+    .modal {
+      width: 90%;
+      font-size: 1rem;
+    }
+  }
+
   @keyframes red-flash {
     0% {
       background: rgba(255, 0, 0, 0.5);
@@ -351,6 +367,14 @@ body {
     color: white;
     z-index: 99999999;
 
+    @media (max-width: 768px) {
+      padding: 250px 20px 20px 20px;
+
+      .title-difficulty {
+        margin-top: 400px;
+      }
+    }
+
     .close-button {
       position: fixed;
       top: 20px;
@@ -385,6 +409,10 @@ body {
       gap: 20px;
       width: 100%;
       max-width: 600px;
+
+      @media (max-width: 768px) {
+        grid-template-columns: 1fr;
+      }
 
       .tile {
         display: flex;
